[package]
name = "orchard_sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5.4"
clap = "4.5.21"
hex = "0.4.3"
incrementalmerkletree = { version = "0.7.0", features = ["test-dependencies"] }
miette = { version = "7.2.0", features = ["fancy"] }
orchard = "0.10.0"
rand = "0.8.5"
rusqlite = "0.32.1"
rusqlite_migration = "1.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_rusqlite = "0.36.0"
zip32 = "0.1.2"
