[package]
name = "orchard_sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
blake3 = "1.5.4"
bs58 = { version = "0.5.1", features = ["check"] }
clap = { version = "4.5.21", features = ["derive"] }
hex = "0.4.3"
incrementalmerkletree = { version = "0.7.0", features = ["test-dependencies"] }
miette = { version = "7.2.0", features = ["fancy"] }
nonempty = { version = "0.7.0", features = ["serde"] }
orchard = { version = "0.10.0", features = ["test-dependencies"] }
rand = "0.8.5"
rusqlite = "0.32.1"
rusqlite_migration = "1.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.215"
serde_rusqlite = "0.36.0"
zip32 = "0.1.2"
